--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-detail/03-templates-innovation-detail.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-innovation-detail/03-templates-innovation-detail.html
@@ -628,15 +628,15 @@
             <article role="article" class="layout-slat profile-thumb">
                 <div class="layout-slat__media"> 
                   <div class="profile-thumb__image--rounded">
-                    <a href="#"><img alt="" src="../../images-patternlab/cj-78-78.jpg"></a>
+                    <a href="#"><img alt="" src="../../images-patternlab/sherlock-78-78.jpg"></a>
                   </div>
                   <div class="profile-thumb__name">
-                    <a href="#">C.J. Cregg</a>  
+                    <a href="#">Sherlock Holmes</a>  
                   </div>
                 </div>
                 <div class="layout-slat__content">
                   <div class="profile-thumb__summary">
-                    Why, why, oh why do you ask me questions that you absolutely positively know I'm not going to answer?
+                    How often have I said to you that when you have eliminated the impossible, whatever remains, however improbable, must be the truth?
                   </div>
                 </div>
             </article>
