--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.html
@@ -723,6 +723,36 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
+                      <img src="../../images-patternlab/daenerys-35-35.jpg">
+                    </div>
+                  </div>
+                  <div class="layout-slat__content">
+                    <div class="view__title"><a href="#">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></div>
+                    <div class="view__meta">
+                      Posted by <strong>Daenerys Targaryen</strong> | May 26 at 6:37pm
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="views-row">
+                <div class="layout-slat layout-slat--small">
+                  <div class="layout-slat__media">      
+                    <div class="view__author-image">
+                      <img src="../../images-patternlab/tyrion-35-35.jpg">
+                    </div>
+                  </div>
+                  <div class="layout-slat__content">
+                    <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
+                    <div class="view__meta">
+                      Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="views-row">
+                <div class="layout-slat layout-slat--small">
+                  <div class="layout-slat__media">      
+                    <div class="view__author-image">
                       <img src="../../images-patternlab/scully-35-35.jpg">
                     </div>
                   </div>
@@ -730,36 +760,6 @@
                     <div class="view__title"><a href="#">Whatever swag accusamus occupy, gentrify butcher tote bag</a></div>
                     <div class="view__meta">
                       Posted by <strong>Dana Scully</strong> | April 13 at 10:14am
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="views-row">
-                <div class="layout-slat layout-slat--small">
-                  <div class="layout-slat__media">      
-                    <div class="view__author-image">
-                      <img src="../../images-patternlab/gordon-35-35.jpg">
-                    </div>
-                  </div>
-                  <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Help, help, I'm being repressed!</a></div>
-                    <div class="view__meta">
-                      Posted by <strong>Gordon Clark</strong> | October 25 at 3:51am
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="views-row">
-                <div class="layout-slat layout-slat--small">
-                  <div class="layout-slat__media">      
-                    <div class="view__author-image">
-                      <img src="../../images-patternlab/mulder-35-35.jpg">
-                    </div>
-                  </div>
-                  <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Bacon ipsum dolor sit amet turducken strip steak beef ribs shank</a></div>
-                    <div class="view__meta">
-                      Posted by <strong>Fox Mulder</strong> | March 22 at 4:45pm
                     </div>
                   </div>
                 </div>
