--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-welcome-page/04-pages-welcome-page.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-welcome-page/04-pages-welcome-page.escaped.html
@@ -5,22 +5,24 @@
         &lt;h1 class=&quot;site-name__text&quot;&gt;Global Innovation Exchange&lt;/h1&gt;
       &lt;/a&gt;
     &lt;/span&gt;
-    &lt;form&gt;
-      &lt;div class=&quot;form-item form-type-textfield form-item-name&quot;&gt;
-        &lt;input type=&quot;text&quot; class=&quot;form-text is-required&quot; maxlength=&quot;60&quot; size=&quot;50&quot; placeholder=&quot;USERNAME&quot;&gt;
-      &lt;/div&gt;
-      &lt;div class=&quot;form-item form-type-password form-item-pass&quot;&gt;
-        &lt;input type=&quot;password&quot; class=&quot;form-text is-required&quot; maxlength=&quot;128&quot; size=&quot;50&quot;placeholder=&quot;PASSWORD&quot;&gt;
-      &lt;/div&gt;
-      &lt;div id=&quot;edit-actions&quot; class=&quot;form-actions&quot;&gt;
-        &lt;input type=&quot;submit&quot; class=&quot;button button--submit&quot; value=&quot;Log in&quot; name=&quot;op&quot; id=&quot;edit-submit&quot;&gt;
-      &lt;/div&gt;
-      &lt;div class=&quot;form-item form-type-checkbox&quot;&gt;
-        &lt;input type=&quot;checkbox&quot; class=&quot;form-checkbox&quot;&gt;  
-        &lt;label&gt;Keep me logged in&lt;/label&gt;
-      &lt;/div&gt;
-      &lt;p class=&quot;forgot-password&quot;&gt;&lt;a href=&quot;#&quot;&gt;Forgot your password?&lt;/a&gt;&lt;/p&gt;
-    &lt;/form&gt;  &lt;/div&gt;
+    &lt;div class=&quot;block&quot;&gt;
+      &lt;form&gt;
+        &lt;div class=&quot;form-item form-type-textfield form-item-name&quot;&gt;
+          &lt;input type=&quot;text&quot; class=&quot;form-text is-required&quot; maxlength=&quot;60&quot; size=&quot;50&quot; placeholder=&quot;USERNAME&quot;&gt;
+        &lt;/div&gt;
+        &lt;div class=&quot;form-item form-type-password form-item-pass&quot;&gt;
+          &lt;input type=&quot;password&quot; class=&quot;form-text is-required&quot; maxlength=&quot;128&quot; size=&quot;50&quot;placeholder=&quot;PASSWORD&quot;&gt;
+        &lt;/div&gt;
+        &lt;div id=&quot;edit-actions&quot; class=&quot;form-actions&quot;&gt;
+          &lt;input type=&quot;submit&quot; class=&quot;button button--submit&quot; value=&quot;Log in&quot; name=&quot;op&quot; id=&quot;edit-submit&quot;&gt;
+        &lt;/div&gt;
+        &lt;div class=&quot;form-item form-type-checkbox&quot;&gt;
+          &lt;input type=&quot;checkbox&quot; class=&quot;form-checkbox&quot;&gt;  
+          &lt;label&gt;Keep me logged in&lt;/label&gt;
+        &lt;/div&gt;
+        &lt;p class=&quot;forgot-password&quot;&gt;&lt;a href=&quot;#&quot;&gt;Forgot your password?&lt;/a&gt;&lt;/p&gt;
+      &lt;/form&gt;
+    &lt;/div&gt;  &lt;/div&gt;
 &lt;/header&gt;
 
 &lt;main id=&quot;main&quot; class=&quot;main&quot; role=&quot;main&quot; tabindex=&quot;-1&quot;&gt;
