welcome page header updates

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-02-drupal-login-form/01-molecules-02-drupal-login-form.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-02-drupal-login-form/01-molecules-02-drupal-login-form.escaped.html
@@ -1,4 +1,4 @@
-&lt;div class=&quot;block&quot;&gt;
+&lt;div class=&quot;block block--login-form&quot;&gt;
   &lt;form&gt;
     &lt;div class=&quot;form-item form-type-textfield form-item-name&quot;&gt;
       &lt;input type=&quot;text&quot; class=&quot;form-text is-required&quot; maxlength=&quot;60&quot; size=&quot;50&quot; placeholder=&quot;USERNAME&quot;&gt;
