--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-02-drupal-login-form/01-molecules-02-drupal-login-form.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-02-drupal-login-form/01-molecules-02-drupal-login-form.html
@@ -55,7 +55,7 @@
     <div class="skiplinks">
       <a href="#main" class="skiplinks__link element-invisible element-focusable">Skip to main content</a>
     </div>
-<div class="block">
+<div class="block block--login-form">
   <form>
     <div class="form-item form-type-textfield form-item-name">
       <input type="text" class="form-text is-required" maxlength="60" size="50" placeholder="USERNAME">
