--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-02-drupal/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-02-drupal/index.html
@@ -584,7 +584,7 @@
 					<div id="molecules-login-form" class="sg-pattern">
 						<h2 class="sg-pattern-head" ><a href="../../patterns/01-molecules-02-drupal-login-form/01-molecules-02-drupal-login-form.html" class="patternLink" data-patternpartial="molecules-login-form">Login Form</a></h2>
 						<div class="sg-pattern-body">
-							<div class="block">
+							<div class="block block--login-form">
   <form>
     <div class="form-item form-type-textfield form-item-name">
       <input type="text" class="form-text is-required" maxlength="60" size="50" placeholder="USERNAME">
@@ -606,7 +606,7 @@
 								<h3 class="sg-code-head">HTML</h3>
 								<pre class="sg-code-html">
 									<code>
-										&lt;div class=&quot;block&quot;&gt;
+										&lt;div class=&quot;block block--login-form&quot;&gt;
   &lt;form&gt;
     &lt;div class=&quot;form-item form-type-textfield form-item-name&quot;&gt;
       &lt;input type=&quot;text&quot; class=&quot;form-text is-required&quot; maxlength=&quot;60&quot; size=&quot;50&quot; placeholder=&quot;USERNAME&quot;&gt;
