--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions-04-header-simple/02-organisms-00-regions-04-header-simple.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions-04-header-simple/02-organisms-00-regions-04-header-simple.html
@@ -62,7 +62,7 @@
         <h1 class="site-name__text">Global Innovation Exchange</h1>
       </a>
     </span>
-    <div class="block">
+    <div class="block block--login-form">
       <form>
         <div class="form-item form-type-textfield form-item-name">
           <input type="text" class="form-text is-required" maxlength="60" size="50" placeholder="USERNAME">
