--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-user/02-organisms-01-content-types-user.escaped.html
@@ -215,13 +215,13 @@
                 &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
                   &lt;div class=&quot;layout-slat__media&quot;&gt;      
                     &lt;div class=&quot;view__author-image&quot;&gt;
-                      &lt;img src=&quot;../../images-patternlab/daenerys-35-35.jpg&quot;&gt;
+                      &lt;img src=&quot;../../images-patternlab/cj-35-35.jpg&quot;&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;layout-slat__content&quot;&gt;
-                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM&lt;/a&gt;&lt;/div&gt;
+                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo&lt;/a&gt;&lt;/div&gt;
                     &lt;div class=&quot;view__meta&quot;&gt;
-                      Posted by &lt;strong&gt;Daenerys Targaryen&lt;/strong&gt; | May 26 at 6:37pm
+                      Posted by &lt;strong&gt;C.J. Cregg&lt;/strong&gt; | August 31 at 3:42pm
                     &lt;/div&gt;
                   &lt;/div&gt;
                 &lt;/div&gt;
@@ -230,13 +230,13 @@
                 &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
                   &lt;div class=&quot;layout-slat__media&quot;&gt;      
                     &lt;div class=&quot;view__author-image&quot;&gt;
-                      &lt;img src=&quot;../../images-patternlab/tyrion-35-35.jpg&quot;&gt;
+                      &lt;img src=&quot;../../images-patternlab/gordon-35-35.jpg&quot;&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;layout-slat__content&quot;&gt;
-                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Thunder, thunder, thundercats, Ho!&lt;/a&gt;&lt;/div&gt;
+                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/div&gt;
                     &lt;div class=&quot;view__meta&quot;&gt;
-                      Posted by &lt;strong&gt;Tyrion Lannister&lt;/strong&gt; | June 8 at 11:37pm
+                      Posted by &lt;strong&gt;Gordon Clark&lt;/strong&gt; | October 25 at 3:51am
                     &lt;/div&gt;
                   &lt;/div&gt;
                 &lt;/div&gt;
@@ -245,13 +245,13 @@
                 &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
                   &lt;div class=&quot;layout-slat__media&quot;&gt;      
                     &lt;div class=&quot;view__author-image&quot;&gt;
-                      &lt;img src=&quot;../../images-patternlab/scully-35-35.jpg&quot;&gt;
+                      &lt;img src=&quot;../../images-patternlab/inigo-35-35.jpg&quot;&gt;
                     &lt;/div&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;layout-slat__content&quot;&gt;
-                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Whatever swag accusamus occupy, gentrify butcher tote bag&lt;/a&gt;&lt;/div&gt;
+                    &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Danish danish candy canes bonbon cheesecake danish marzipan&lt;/a&gt;&lt;/div&gt;
                     &lt;div class=&quot;view__meta&quot;&gt;
-                      Posted by &lt;strong&gt;Dana Scully&lt;/strong&gt; | April 13 at 10:14am
+                      Posted by &lt;strong&gt;Inigo Montoya&lt;/strong&gt; | November 19 at 11:55pm
                     &lt;/div&gt;
                   &lt;/div&gt;
                 &lt;/div&gt;
