--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-welcome-page/02-organisms-01-content-types-welcome-page.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-welcome-page/02-organisms-01-content-types-welcome-page.escaped.html
@@ -27,7 +27,7 @@
       &lt;h1&gt;Sign Up&lt;/h1&gt;
       &lt;form&gt;
         &lt;div id=&quot;edit-lr-social-login-links&quot; class=&quot;form-item form-type-item&quot;&gt;
-          &lt;label&gt;Sign up with social:&lt;/label&gt;
+          &lt;label&gt;Login with social:&lt;/label&gt;
           &lt;div class=&quot;lr_singleglider_200 interface_container&quot;&gt;     
             &lt;div class=&quot;lr_icons_box&quot;&gt;       
               &lt;div style=&quot;width:100%&quot;&gt;    
