--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-welcome-page/02-organisms-01-content-types-welcome-page.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-welcome-page/02-organisms-01-content-types-welcome-page.html
@@ -84,7 +84,7 @@
       <h1>Sign Up</h1>
       <form>
         <div id="edit-lr-social-login-links" class="form-item form-type-item">
-          <label>Sign up with social:</label>
+          <label>Login with social:</label>
           <div class="lr_singleglider_200 interface_container">     
             <div class="lr_icons_box">       
               <div style="width:100%">    
