--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
@@ -810,15 +810,15 @@
     <article role="article" class="layout-slat profile-thumb">
         <div class="layout-slat__media"> 
           <div class="profile-thumb__image--rounded">
-            <a href="#"><img alt="" src="../../images-patternlab/sherlock-78-78.jpg"></a>
+            <a href="#"><img alt="" src="../../images-patternlab/cameron-78-78.jpg"></a>
           </div>
           <div class="profile-thumb__name">
-            <a href="#">Sherlock Holmes</a>  
+            <a href="#">Cameron Howe</a>  
           </div>
         </div>
         <div class="layout-slat__content">
           <div class="profile-thumb__summary">
-            How often have I said to you that when you have eliminated the impossible, whatever remains, however improbable, must be the truth?
+            Computers could be more. They should be.
           </div>
         </div>
     </article>
@@ -835,15 +835,15 @@
     &lt;article role=&quot;article&quot; class=&quot;layout-slat profile-thumb&quot;&gt;
         &lt;div class=&quot;layout-slat__media&quot;&gt; 
           &lt;div class=&quot;profile-thumb__image--rounded&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/sherlock-78-78.jpg&quot;&gt;&lt;/a&gt;
+            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/cameron-78-78.jpg&quot;&gt;&lt;/a&gt;
           &lt;/div&gt;
           &lt;div class=&quot;profile-thumb__name&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;Sherlock Holmes&lt;/a&gt;  
+            &lt;a href=&quot;#&quot;&gt;Cameron Howe&lt;/a&gt;  
           &lt;/div&gt;
         &lt;/div&gt;
         &lt;div class=&quot;layout-slat__content&quot;&gt;
           &lt;div class=&quot;profile-thumb__summary&quot;&gt;
-            How often have I said to you that when you have eliminated the impossible, whatever remains, however improbable, must be the truth?
+            Computers could be more. They should be.
           &lt;/div&gt;
         &lt;/div&gt;
     &lt;/article&gt;
@@ -866,13 +866,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/daenerys-35-35.jpg">
+                <img src="../../images-patternlab/cj-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></div>
+              <div class="view__title"><a href="#">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></div>
               <div class="view__meta">
-                Posted by <strong>Daenerys Targaryen</strong> | May 26 at 6:37pm
+                Posted by <strong>C.J. Cregg</strong> | August 31 at 3:42pm
               </div>
             </div>
           </div>
@@ -881,13 +881,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/tyrion-35-35.jpg">
+                <img src="../../images-patternlab/gordon-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Thunder, thunder, thundercats, Ho!</a></div>
+              <div class="view__title"><a href="#">Help, help, I'm being repressed!</a></div>
               <div class="view__meta">
-                Posted by <strong>Tyrion Lannister</strong> | June 8 at 11:37pm
+                Posted by <strong>Gordon Clark</strong> | October 25 at 3:51am
               </div>
             </div>
           </div>
@@ -896,13 +896,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/scully-35-35.jpg">
+                <img src="../../images-patternlab/inigo-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Whatever swag accusamus occupy, gentrify butcher tote bag</a></div>
+              <div class="view__title"><a href="#">Danish danish candy canes bonbon cheesecake danish marzipan</a></div>
               <div class="view__meta">
-                Posted by <strong>Dana Scully</strong> | April 13 at 10:14am
+                Posted by <strong>Inigo Montoya</strong> | November 19 at 11:55pm
               </div>
             </div>
           </div>
@@ -925,13 +925,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/daenerys-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/cj-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Daenerys Targaryen&lt;/strong&gt; | May 26 at 6:37pm
+                Posted by &lt;strong&gt;C.J. Cregg&lt;/strong&gt; | August 31 at 3:42pm
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
@@ -940,13 +940,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/tyrion-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/gordon-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Thunder, thunder, thundercats, Ho!&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Help, help, I'm being repressed!&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Tyrion Lannister&lt;/strong&gt; | June 8 at 11:37pm
+                Posted by &lt;strong&gt;Gordon Clark&lt;/strong&gt; | October 25 at 3:51am
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
@@ -955,13 +955,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/scully-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/inigo-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Whatever swag accusamus occupy, gentrify butcher tote bag&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Danish danish candy canes bonbon cheesecake danish marzipan&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Dana Scully&lt;/strong&gt; | April 13 at 10:14am
+                Posted by &lt;strong&gt;Inigo Montoya&lt;/strong&gt; | November 19 at 11:55pm
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
