--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions-04-header-simple/02-organisms-00-regions-04-header-simple.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions-04-header-simple/02-organisms-00-regions-04-header-simple.escaped.html
@@ -5,7 +5,7 @@
         &lt;h1 class=&quot;site-name__text&quot;&gt;Global Innovation Exchange&lt;/h1&gt;
       &lt;/a&gt;
     &lt;/span&gt;
-    &lt;div class=&quot;block&quot;&gt;
+    &lt;div class=&quot;block block--login-form&quot;&gt;
       &lt;form&gt;
         &lt;div class=&quot;form-item form-type-textfield form-item-name&quot;&gt;
           &lt;input type=&quot;text&quot; class=&quot;form-text is-required&quot; maxlength=&quot;60&quot; size=&quot;50&quot; placeholder=&quot;USERNAME&quot;&gt;
