--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-00-regions/index.html
@@ -1142,7 +1142,7 @@
         <h1 class="site-name__text">Global Innovation Exchange</h1>
       </a>
     </span>
-    <div class="block">
+    <div class="block block--login-form">
       <form>
         <div class="form-item form-type-textfield form-item-name">
           <input type="text" class="form-text is-required" maxlength="60" size="50" placeholder="USERNAME">
@@ -1178,7 +1178,7 @@
         &lt;h1 class=&quot;site-name__text&quot;&gt;Global Innovation Exchange&lt;/h1&gt;
       &lt;/a&gt;
     &lt;/span&gt;
-    &lt;div class=&quot;block&quot;&gt;
+    &lt;div class=&quot;block block--login-form&quot;&gt;
       &lt;form&gt;
         &lt;div class=&quot;form-item form-type-textfield form-item-name&quot;&gt;
           &lt;input type=&quot;text&quot; class=&quot;form-text is-required&quot; maxlength=&quot;60&quot; size=&quot;50&quot; placeholder=&quot;USERNAME&quot;&gt;
