--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-welcome-page/03-templates-welcome-page.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-welcome-page/03-templates-welcome-page.html
@@ -62,7 +62,7 @@
         <h1 class="site-name__text">Global Innovation Exchange</h1>
       </a>
     </span>
-    <div class="block">
+    <div class="block block--login-form">
       <form>
         <div class="form-item form-type-textfield form-item-name">
           <input type="text" class="form-text is-required" maxlength="60" size="50" placeholder="USERNAME">
@@ -114,7 +114,7 @@
           <h1>Sign Up</h1>
           <form>
             <div id="edit-lr-social-login-links" class="form-item form-type-item">
-              <label>Sign up with social:</label>
+              <label>Login with social:</label>
               <div class="lr_singleglider_200 interface_container">     
                 <div class="lr_icons_box">       
                   <div style="width:100%">    
