--- a/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-welcome-page/04-pages-welcome-page.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/04-pages-welcome-page/04-pages-welcome-page.escaped.html
@@ -5,7 +5,7 @@
         &lt;h1 class=&quot;site-name__text&quot;&gt;Global Innovation Exchange&lt;/h1&gt;
       &lt;/a&gt;
     &lt;/span&gt;
-    &lt;div class=&quot;block&quot;&gt;
+    &lt;div class=&quot;block block--login-form&quot;&gt;
       &lt;form&gt;
         &lt;div class=&quot;form-item form-type-textfield form-item-name&quot;&gt;
           &lt;input type=&quot;text&quot; class=&quot;form-text is-required&quot; maxlength=&quot;60&quot; size=&quot;50&quot; placeholder=&quot;USERNAME&quot;&gt;
@@ -57,7 +57,7 @@
           &lt;h1&gt;Sign Up&lt;/h1&gt;
           &lt;form&gt;
             &lt;div id=&quot;edit-lr-social-login-links&quot; class=&quot;form-item form-type-item&quot;&gt;
-              &lt;label&gt;Sign up with social:&lt;/label&gt;
+              &lt;label&gt;Login with social:&lt;/label&gt;
               &lt;div class=&quot;lr_singleglider_200 interface_container&quot;&gt;     
                 &lt;div class=&quot;lr_icons_box&quot;&gt;       
                   &lt;div style=&quot;width:100%&quot;&gt;    
