--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-innovation/02-organisms-01-content-types-innovation.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-innovation/02-organisms-01-content-types-innovation.escaped.html
@@ -120,15 +120,15 @@
             &lt;article role=&quot;article&quot; class=&quot;layout-slat profile-thumb&quot;&gt;
                 &lt;div class=&quot;layout-slat__media&quot;&gt; 
                   &lt;div class=&quot;profile-thumb__image--rounded&quot;&gt;
-                    &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/cameron-78-78.jpg&quot;&gt;&lt;/a&gt;
+                    &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/scully-78-78.jpg&quot;&gt;&lt;/a&gt;
                   &lt;/div&gt;
                   &lt;div class=&quot;profile-thumb__name&quot;&gt;
-                    &lt;a href=&quot;#&quot;&gt;Cameron Howe&lt;/a&gt;  
+                    &lt;a href=&quot;#&quot;&gt;Dana Scully&lt;/a&gt;  
                   &lt;/div&gt;
                 &lt;/div&gt;
                 &lt;div class=&quot;layout-slat__content&quot;&gt;
                   &lt;div class=&quot;profile-thumb__summary&quot;&gt;
-                    Computers could be more. They should be.
+                    Just because I can't explain it doesn't mean I'm going to believe they're UFOs.
                   &lt;/div&gt;
                 &lt;/div&gt;
             &lt;/article&gt;
@@ -212,15 +212,15 @@
           
             &lt;div class=&quot;field field--innovation-status-update&quot;&gt;
               &lt;h2 class=&quot;field__label field__label--above&quot;&gt;Status Update&lt;/h2&gt;
-              &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sitâ€‹â€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
+              &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sit&acirc;€‹&acirc;€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
             &lt;/div&gt;
             &lt;div class=&quot;field field--innovation-works&quot;&gt;
               &lt;h2 class=&quot;field__label field__label--above&quot;&gt;How it Works&lt;/h2&gt;
-              &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sitâ€‹â€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
+              &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sit&acirc;€‹&acirc;€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
             &lt;/div&gt;
             &lt;div class=&quot;field field--innovation-evidence&quot;&gt;
               &lt;h2 class=&quot;field__label field__label--above&quot;&gt;Evidence it Works&lt;/h2&gt;
-              &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sitâ€‹â€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
+              &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sit&acirc;€‹&acirc;€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
             &lt;/div&gt;
             &lt;div class=&quot;field field--innovation-proof-evidence&quot;&gt;
               &lt;h2 class=&quot;field__label field__label--above&quot;&gt;Proof of Evidence&lt;/h2&gt;
@@ -231,15 +231,15 @@
             &lt;/div&gt;
             &lt;div class=&quot;field field--innovation-testers&quot;&gt;
               &lt;h2 class=&quot;field__label field__label--above&quot;&gt;Current Users / Testers Include&lt;/h2&gt;
-              &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sitâ€‹â€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
+              &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sit&acirc;€‹&acirc;€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
             &lt;/div&gt;
             &lt;div class=&quot;field field--innovation-impact&quot;&gt;
               &lt;h2 class=&quot;field__label field__label--above&quot;&gt;Path and Impact of Scale&lt;/h2&gt;
-              &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sitâ€‹â€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
+              &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sit&acirc;€‹&acirc;€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
             &lt;/div&gt;
             &lt;div class=&quot;field field--innovation-steps&quot;&gt;
               &lt;h2 class=&quot;field__label field__label--above&quot;&gt;Next Steps&lt;/h2&gt;
-              &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sitâ€‹â€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
+              &lt;p&gt;Zombies reversus ab inferno, nam malum cerebro. De carne animata corpora quaeritis. Summus sit&acirc;€‹&acirc;€‹, morbo vel maleficia? De Apocalypsi undead dictum mauris. Hi mortuis soulless creaturas, imo monstra adventus vultus comedat cerebella viventium. Qui offenderit rapto, terribilem incessu. The voodoo sacerdos suscitat mortuos comedere carnem. Search for solum oculi eorum defunctis cerebro. Nescio an malus.&lt;/p&gt;
             &lt;/div&gt;
             &lt;div class=&quot;field field--innovation-news field--border&quot;&gt;
               &lt;h2 class=&quot;field__label field__label--above&quot;&gt;In the News&lt;/h2&gt;
