--- a/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-innovation/02-organisms-01-content-types-innovation.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/02-organisms-01-content-types-innovation/02-organisms-01-content-types-innovation.html
@@ -177,15 +177,15 @@
             <article role="article" class="layout-slat profile-thumb">
                 <div class="layout-slat__media"> 
                   <div class="profile-thumb__image--rounded">
-                    <a href="#"><img alt="" src="../../images-patternlab/cameron-78-78.jpg"></a>
+                    <a href="#"><img alt="" src="../../images-patternlab/scully-78-78.jpg"></a>
                   </div>
                   <div class="profile-thumb__name">
-                    <a href="#">Cameron Howe</a>  
+                    <a href="#">Dana Scully</a>  
                   </div>
                 </div>
                 <div class="layout-slat__content">
                   <div class="profile-thumb__summary">
-                    Computers could be more. They should be.
+                    Just because I can't explain it doesn't mean I'm going to believe they're UFOs.
                   </div>
                 </div>
             </article>
