--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-02-drupal-login-form/01-molecules-02-drupal-login-form.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-02-drupal-login-form/01-molecules-02-drupal-login-form.html
@@ -55,20 +55,16 @@
     <div class="skiplinks">
       <a href="#main" class="skiplinks__link element-invisible element-focusable">Skip to main content</a>
     </div>
-<div class="block block--login-form">
+<div class="block block--gie-homepage-welcome-login">
   <form>
     <div class="form-item form-type-textfield form-item-name">
-      <input type="text" class="form-text is-required" maxlength="60" size="50" placeholder="USERNAME">
+      <input type="text" class="form-text is-required" maxlength="60" size="15" placeholder="Username">
     </div>
     <div class="form-item form-type-password form-item-pass">
-      <input type="password" class="form-text is-required" maxlength="128" size="50"placeholder="PASSWORD">
+      <input type="password" class="form-text is-required" maxlength="128" size="15"placeholder="Password">
     </div>
     <div id="edit-actions" class="form-actions">
-      <input type="submit" class="button button--submit" value="Log in" name="op" id="edit-submit">
-    </div>
-    <div class="form-item form-type-checkbox">
-      <input type="checkbox" class="form-checkbox">  
-      <label>Keep me logged in</label>
+      <input type="submit" class="button button--submit" value="Log in" id="edit-submit--2">
     </div>
     <p class="forgot-password"><a href="#">Forgot your password?</a></p>
   </form>
