--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-02-drupal/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-02-drupal/index.html
@@ -584,20 +584,16 @@
 					<div id="molecules-login-form" class="sg-pattern">
 						<h2 class="sg-pattern-head" ><a href="../../patterns/01-molecules-02-drupal-login-form/01-molecules-02-drupal-login-form.html" class="patternLink" data-patternpartial="molecules-login-form">Login Form</a></h2>
 						<div class="sg-pattern-body">
-							<div class="block block--login-form">
+							<div class="block block--gie-homepage-welcome-login">
   <form>
     <div class="form-item form-type-textfield form-item-name">
-      <input type="text" class="form-text is-required" maxlength="60" size="50" placeholder="USERNAME">
+      <input type="text" class="form-text is-required" maxlength="60" size="15" placeholder="Username">
     </div>
     <div class="form-item form-type-password form-item-pass">
-      <input type="password" class="form-text is-required" maxlength="128" size="50"placeholder="PASSWORD">
+      <input type="password" class="form-text is-required" maxlength="128" size="15"placeholder="Password">
     </div>
     <div id="edit-actions" class="form-actions">
-      <input type="submit" class="button button--submit" value="Log in" name="op" id="edit-submit">
-    </div>
-    <div class="form-item form-type-checkbox">
-      <input type="checkbox" class="form-checkbox">  
-      <label>Keep me logged in</label>
+      <input type="submit" class="button button--submit" value="Log in" id="edit-submit--2">
     </div>
     <p class="forgot-password"><a href="#">Forgot your password?</a></p>
   </form>
@@ -606,20 +602,16 @@
 								<h3 class="sg-code-head">HTML</h3>
 								<pre class="sg-code-html">
 									<code>
-										&lt;div class=&quot;block block--login-form&quot;&gt;
+										&lt;div class=&quot;block block--gie-homepage-welcome-login&quot;&gt;
   &lt;form&gt;
     &lt;div class=&quot;form-item form-type-textfield form-item-name&quot;&gt;
-      &lt;input type=&quot;text&quot; class=&quot;form-text is-required&quot; maxlength=&quot;60&quot; size=&quot;50&quot; placeholder=&quot;USERNAME&quot;&gt;
+      &lt;input type=&quot;text&quot; class=&quot;form-text is-required&quot; maxlength=&quot;60&quot; size=&quot;15&quot; placeholder=&quot;Username&quot;&gt;
     &lt;/div&gt;
     &lt;div class=&quot;form-item form-type-password form-item-pass&quot;&gt;
-      &lt;input type=&quot;password&quot; class=&quot;form-text is-required&quot; maxlength=&quot;128&quot; size=&quot;50&quot;placeholder=&quot;PASSWORD&quot;&gt;
+      &lt;input type=&quot;password&quot; class=&quot;form-text is-required&quot; maxlength=&quot;128&quot; size=&quot;15&quot;placeholder=&quot;Password&quot;&gt;
     &lt;/div&gt;
     &lt;div id=&quot;edit-actions&quot; class=&quot;form-actions&quot;&gt;
-      &lt;input type=&quot;submit&quot; class=&quot;button button--submit&quot; value=&quot;Log in&quot; name=&quot;op&quot; id=&quot;edit-submit&quot;&gt;
-    &lt;/div&gt;
-    &lt;div class=&quot;form-item form-type-checkbox&quot;&gt;
-      &lt;input type=&quot;checkbox&quot; class=&quot;form-checkbox&quot;&gt;  
-      &lt;label&gt;Keep me logged in&lt;/label&gt;
+      &lt;input type=&quot;submit&quot; class=&quot;button button--submit&quot; value=&quot;Log in&quot; id=&quot;edit-submit--2&quot;&gt;
     &lt;/div&gt;
     &lt;p class=&quot;forgot-password&quot;&gt;&lt;a href=&quot;#&quot;&gt;Forgot your password?&lt;/a&gt;&lt;/p&gt;
   &lt;/form&gt;
