Styling for Welcome info pane. Add animation for page background

--- a/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/03-templates-user/03-templates-user.html
@@ -713,7 +713,7 @@
           </div>
         </div>
       </div>
-      
+
         
       <div class="pane pane--recent-conversations-recent-conversations">
         <h2 class="pane__title">Recent Conversations</h2>  
@@ -738,13 +738,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/cj-35-35.jpg">
+                      <img src="../../images-patternlab/daenerys-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></div>
+                    <div class="view__title"><a href="#">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></div>
                     <div class="view__meta">
-                      Posted by <strong>C.J. Cregg</strong> | August 31 at 3:42pm
+                      Posted by <strong>Daenerys Targaryen</strong> | May 26 at 6:37pm
                     </div>
                   </div>
                 </div>
@@ -753,13 +753,13 @@
                 <div class="layout-slat layout-slat--small">
                   <div class="layout-slat__media">      
                     <div class="view__author-image">
-                      <img src="../../images-patternlab/josh-35-35.jpg">
+                      <img src="../../images-patternlab/buttercup-35-35.jpg">
                     </div>
                   </div>
                   <div class="layout-slat__content">
-                    <div class="view__title"><a href="#">Yeah, I like animals better than people sometimes</a></div>
+                    <div class="view__title"><a href="#">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></div>
                     <div class="view__meta">
-                      Posted by <strong>Joshua Lyman</strong> | July 22 at 11:12am
+                      Posted by <strong>Princess Buttercup</strong> | December 28 at 8:34am
                     </div>
                   </div>
                 </div>
