--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes-point-of-contact/01-molecules-04-panes-point-of-contact.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes-point-of-contact/01-molecules-04-panes-point-of-contact.escaped.html
@@ -4,15 +4,15 @@
     &lt;article role=&quot;article&quot; class=&quot;layout-slat profile-thumb&quot;&gt;
         &lt;div class=&quot;layout-slat__media&quot;&gt; 
           &lt;div class=&quot;profile-thumb__image--rounded&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/scully-78-78.jpg&quot;&gt;&lt;/a&gt;
+            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/buttercup-78-78.jpg&quot;&gt;&lt;/a&gt;
           &lt;/div&gt;
           &lt;div class=&quot;profile-thumb__name&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;Dana Scully&lt;/a&gt;  
+            &lt;a href=&quot;#&quot;&gt;Princess Buttercup&lt;/a&gt;  
           &lt;/div&gt;
         &lt;/div&gt;
         &lt;div class=&quot;layout-slat__content&quot;&gt;
           &lt;div class=&quot;profile-thumb__summary&quot;&gt;
-            Just because I can't explain it doesn't mean I'm going to believe they're UFOs.
+            You cannot track that, not with a thousand bloodhounds, and you cannot break it, not with a thousand swords.
           &lt;/div&gt;
         &lt;/div&gt;
     &lt;/article&gt;
