--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes-point-of-contact/01-molecules-04-panes-point-of-contact.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes-point-of-contact/01-molecules-04-panes-point-of-contact.html
@@ -61,15 +61,15 @@
     <article role="article" class="layout-slat profile-thumb">
         <div class="layout-slat__media"> 
           <div class="profile-thumb__image--rounded">
-            <a href="#"><img alt="" src="../../images-patternlab/scully-78-78.jpg"></a>
+            <a href="#"><img alt="" src="../../images-patternlab/buttercup-78-78.jpg"></a>
           </div>
           <div class="profile-thumb__name">
-            <a href="#">Dana Scully</a>  
+            <a href="#">Princess Buttercup</a>  
           </div>
         </div>
         <div class="layout-slat__content">
           <div class="profile-thumb__summary">
-            Just because I can't explain it doesn't mean I'm going to believe they're UFOs.
+            You cannot track that, not with a thousand bloodhounds, and you cannot break it, not with a thousand swords.
           </div>
         </div>
     </article>
