--- a/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
+++ b/public/sites/all/themes/gesso/patternlab/public/patterns/01-molecules-04-panes/index.html
@@ -810,15 +810,15 @@
     <article role="article" class="layout-slat profile-thumb">
         <div class="layout-slat__media"> 
           <div class="profile-thumb__image--rounded">
-            <a href="#"><img alt="" src="../../images-patternlab/scully-78-78.jpg"></a>
+            <a href="#"><img alt="" src="../../images-patternlab/buttercup-78-78.jpg"></a>
           </div>
           <div class="profile-thumb__name">
-            <a href="#">Dana Scully</a>  
+            <a href="#">Princess Buttercup</a>  
           </div>
         </div>
         <div class="layout-slat__content">
           <div class="profile-thumb__summary">
-            Just because I can't explain it doesn't mean I'm going to believe they're UFOs.
+            You cannot track that, not with a thousand bloodhounds, and you cannot break it, not with a thousand swords.
           </div>
         </div>
     </article>
@@ -835,15 +835,15 @@
     &lt;article role=&quot;article&quot; class=&quot;layout-slat profile-thumb&quot;&gt;
         &lt;div class=&quot;layout-slat__media&quot;&gt; 
           &lt;div class=&quot;profile-thumb__image--rounded&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/scully-78-78.jpg&quot;&gt;&lt;/a&gt;
+            &lt;a href=&quot;#&quot;&gt;&lt;img alt=&quot;&quot; src=&quot;../../images-patternlab/buttercup-78-78.jpg&quot;&gt;&lt;/a&gt;
           &lt;/div&gt;
           &lt;div class=&quot;profile-thumb__name&quot;&gt;
-            &lt;a href=&quot;#&quot;&gt;Dana Scully&lt;/a&gt;  
+            &lt;a href=&quot;#&quot;&gt;Princess Buttercup&lt;/a&gt;  
           &lt;/div&gt;
         &lt;/div&gt;
         &lt;div class=&quot;layout-slat__content&quot;&gt;
           &lt;div class=&quot;profile-thumb__summary&quot;&gt;
-            Just because I can't explain it doesn't mean I'm going to believe they're UFOs.
+            You cannot track that, not with a thousand bloodhounds, and you cannot break it, not with a thousand swords.
           &lt;/div&gt;
         &lt;/div&gt;
     &lt;/article&gt;
@@ -881,13 +881,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/cj-35-35.jpg">
+                <img src="../../images-patternlab/daenerys-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo</a></div>
+              <div class="view__title"><a href="#">Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM</a></div>
               <div class="view__meta">
-                Posted by <strong>C.J. Cregg</strong> | August 31 at 3:42pm
+                Posted by <strong>Daenerys Targaryen</strong> | May 26 at 6:37pm
               </div>
             </div>
           </div>
@@ -896,13 +896,13 @@
           <div class="layout-slat layout-slat--small">
             <div class="layout-slat__media">      
               <div class="view__author-image">
-                <img src="../../images-patternlab/josh-35-35.jpg">
+                <img src="../../images-patternlab/buttercup-35-35.jpg">
               </div>
             </div>
             <div class="layout-slat__content">
-              <div class="view__title"><a href="#">Yeah, I like animals better than people sometimes</a></div>
+              <div class="view__title"><a href="#">Cottage cheese brie lancashire. Boursin when the cheese comes out.</a></div>
               <div class="view__meta">
-                Posted by <strong>Joshua Lyman</strong> | July 22 at 11:12am
+                Posted by <strong>Princess Buttercup</strong> | December 28 at 8:34am
               </div>
             </div>
           </div>
@@ -940,13 +940,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/cj-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/daenerys-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Webtwo ipsum dolor sit amet, eskobo chumby doostang bebo&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Marshall McLuhan Colbert bump backpack journalist vast wasteland Romenesko CPM&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;C.J. Cregg&lt;/strong&gt; | August 31 at 3:42pm
+                Posted by &lt;strong&gt;Daenerys Targaryen&lt;/strong&gt; | May 26 at 6:37pm
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
@@ -955,13 +955,13 @@
           &lt;div class=&quot;layout-slat layout-slat--small&quot;&gt;
             &lt;div class=&quot;layout-slat__media&quot;&gt;      
               &lt;div class=&quot;view__author-image&quot;&gt;
-                &lt;img src=&quot;../../images-patternlab/josh-35-35.jpg&quot;&gt;
+                &lt;img src=&quot;../../images-patternlab/buttercup-35-35.jpg&quot;&gt;
               &lt;/div&gt;
             &lt;/div&gt;
             &lt;div class=&quot;layout-slat__content&quot;&gt;
-              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Yeah, I like animals better than people sometimes&lt;/a&gt;&lt;/div&gt;
+              &lt;div class=&quot;view__title&quot;&gt;&lt;a href=&quot;#&quot;&gt;Cottage cheese brie lancashire. Boursin when the cheese comes out.&lt;/a&gt;&lt;/div&gt;
               &lt;div class=&quot;view__meta&quot;&gt;
-                Posted by &lt;strong&gt;Joshua Lyman&lt;/strong&gt; | July 22 at 11:12am
+                Posted by &lt;strong&gt;Princess Buttercup&lt;/strong&gt; | December 28 at 8:34am
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
